# rock-paper-scissors

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: main_branch_ci.yaml  pr_ci.yaml
rps/: rps.py
tests/: conftest.py
